5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1590_1017.log
== TEST (2019-03-25 15:48:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
d=R.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2))
print(round(d, 5))






-- ERROR:
File "XXXX", line 9
    d=R.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:48:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
d=R.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2))
print(round(d, 5))






-- EXECUTION TIME:
0.19698
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 9
    d=R.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1\u2212g2))
                                                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:52:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- ERROR:
File "XXXX", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:52:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- EXECUTION TIME:
0.158319
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
print(round(d, 5))






-- ERROR:
File "XXXX", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:53:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
print(round(d, 5))






-- EXECUTION TIME:
0.141271
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:53:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Longitude de P1: ")))
t3 = radians(float(input("Latitude de P2: ")))
t4 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
print(round(d, 5))






-- EXECUTION TIME:
0.208494
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(t1-t4)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:54:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- ERROR:
File "XXXX", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:54:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- EXECUTION TIME:
0.152829
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:54:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- EXECUTION TIME:
0.156296
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=6371,01.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:55:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- ERROR:
File "XXXX", line 11
    print(round(d, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:55:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- EXECUTION TIME:
0.208209
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(round(d, 5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:55:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2)
print(round(d, 5))






-- EXECUTION TIME:
0.222221
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    print(round(d, 5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:56:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'arccos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.207994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'arccos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.150012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= r.arccos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'arccos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.15488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'acos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:56:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'acos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.215053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1-g2))
AttributeError: 'float' object has no attribute 'acos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.209431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:56:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:56:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.141309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:57:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.171051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d=  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:57:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d=  6371.01acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.147721
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 10
    d=  6371.01acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:57:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.194112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:57:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:57:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.137306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:58:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.132727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.156587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin(t1)*sin(t2)+cos(t1)*cos(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.142296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:58:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.209609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:58:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.176549
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:58:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:58:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
print(round(d, 5))






-- EXECUTION TIME:
0.153364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d =  6371.01*acos*(sin*(t1)*sin*(t2)+cos*(t1)*cos*(t2)*-cos*(g1-g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:06:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))






-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 21:06:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r = 6371.01
d =  r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))






-- EXECUTION TIME:
0.142038
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
